; ModuleID = '/home/carl/AnghaBench/lab/engine/code/tools/asm/extr_q3asm.c_atoiNoCap.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/tools/asm/extr_q3asm.c_atoiNoCap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%union.anon = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @atoiNoCap to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @atoiNoCap(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i64, align 8
  %4 = alloca %union.anon, align 4
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = call i64 @atoi64(i8* %5)
  store i64 %6, i64* %3, align 8
  %7 = load i64, i64* %3, align 8
  %8 = icmp slt i64 %7, 0
  br i1 %8, label %9, label %13

9:                                                ; preds = %1
  %10 = load i64, i64* %3, align 8
  %11 = trunc i64 %10 to i32
  %12 = bitcast %union.anon* %4 to i32*
  store i32 %11, i32* %12, align 4
  br label %17

13:                                               ; preds = %1
  %14 = load i64, i64* %3, align 8
  %15 = trunc i64 %14 to i32
  %16 = bitcast %union.anon* %4 to i32*
  store i32 %15, i32* %16, align 4
  br label %17

17:                                               ; preds = %13, %9
  %18 = bitcast %union.anon* %4 to i32*
  %19 = load i32, i32* %18, align 4
  ret i32 %19
}

declare dso_local i64 @atoi64(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
